Fixed type weight on mobile

--- a/_src/scss/base/_variables.scss
+++ b/_src/scss/base/_variables.scss
@@ -2,6 +2,7 @@
 $font-main              : 'Work Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 $font-weight-thin       : 100;
 $font-weight-extralight : 200;
+$font-weight-normal     : 300;
 $font-weight-black      : 900;
 
 $color-text-dark  : #2B3E51;
